--- a/Javascript/style.css
+++ b/Javascript/style.css
@@ -12,3 +12,79 @@ td button i {
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
+.modal-header {
+    background: #0d6efd;
+    color: white;
+}
+.modal-body form {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+}
+.modal-body form .imgholder {
+    /* flex-basis: 32%; */
+    height: 200px;
+    width: 200px;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.imgholder .upload {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.upload i {
+    color: #fff;
+    font-size: 105px;
+}
+.imgholder:hover .upload {
+    display: flex;
+}
+.imgholder .upload input {
+    display: none;
+}
+.modal-body form .inputField {
+    flex-basis: 68%;
+    border-left: 5px groove blue;
+    padding-left: 20px;
+}
+form .inputField > div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+form .inputField > div label {
+    font-size: 20px;
+    font-weight: 500;
+}
+#userForm form .inputField > div label::after {
+    content: "*";
+    color: red;
+}
+form .inputField > div input {
+    width: 75%;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background: transparent;
+    border-bottom: 2px solid blue;
+}
+.modal-footer .submit {
+    font-size: 18px;
+}
+
+#readData form .inputField > div input {
+    color: #000;
+    font-size: 18px;
+}
